@@ -1,1 +1,9 @@
 # neohacks_puzzle
+
+How to use.
+
+export PATH_TO_FX=<location_of_javafx_path>/javafx-sdk-16/lib
+
+javac --module-path $PATH_TO_FX --add-modules javafx.controls PuzzleMain.java
+
+java --module-path $PATH_TO_FX --add-modules javafx.controls PuzzleMain
